Bug: md-select jump

--- a/src/assets/style/_reset.scss
+++ b/src/assets/style/_reset.scss
@@ -50,6 +50,7 @@ body {
 
 // https://css-tricks.com/almanac/properties/u/user-select/
 body {
+  position: static !important;  // To fix md-select jump bug
   -webkit-user-select: none;  /* Chrome all / Safari all */
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
